# funrun

./: pyproject.toml
src/funrun/: run.py
