[project]
name = "ffunrun"
version = "0.1.14"
description = "funrun"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "funbuild>=1.5.86", "funutil>=1.0.48",]
[[project.authors]]
name = "niuliangtao"
email = "farfarfun@qq.com"

[project.scripts]
funrun = "funrun.run:run_task"

[tool.setuptools]
license-files = []

[tool.uv]
[[tool.uv.index]]
name = "packages-pypi"
url = "https://packages.aliyun.com/5fc5eb115dbd287006145e5f/pypi/funpy"

